--- a/P20a_PracticasMetodos/P20a_PracticasMetodos/P20a_PracticasMetodos.csproj
+++ b/P20a_PracticasMetodos/P20a_PracticasMetodos/P20a_PracticasMetodos.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1A3F0324-2A3B-4863-95A7-6F1DD5DB60C7}</ProjectGuid>
+    <ProjectGuid>{AA5C2E90-0BBD-4C78-AA61-22979F7ED9EB}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Métodos_entrenamiento_</RootNamespace>
-    <AssemblyName>Métodos%28entrenamiento%29</AssemblyName>
+    <RootNamespace>P20a_PracticasMetodos</RootNamespace>
+    <AssemblyName>P20a_PracticasMetodos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
